# duckiepond-nctu

./: .gitignore  README.md  alias-setup.sh  docker_join.sh  docker_run.sh  docker_run_gpu.sh  environment.sh  environments.sh  nano_docker_join.sh  nano_docker_run.sh  rpi_docker_run.sh  set_all.sh  set_ros_ip.sh  set_ros_master.sh  set_usb_port.sh
arduino/: README.md
arduino/ros_lib/apriltags2_ros/: AnalyzeSingleImage.h  AprilTagDetection.h  AprilTagDetectionArray.h
arduino/ros_lib/axis_camera/: Axis.h
arduino/ros_lib/duckiepond/: BoolStamped.h  Box.h  Boxlist.h  Heading.h  Motor4Cmd.h  MotorCmd.h  SetValue.h  VelocityVector.h
arduino/ros_lib/opencv_apps/: Circle.h  Face.h  FaceArray.h  FaceArrayStamped.h  Moment.h  Point2D.h  Rect.h  RotatedRect.h  Size.h
arduino/ros_lib/phidgets_high_speed_encoder/: EncoderDecimatedSpeed.h
arduino/ros_lib/um6/: Reset.h
arduino/ros_lib/wireless_msgs/: Connection.h  Network.h  Quality.h  Scan.h
arduino/ros_motor_cmd_receiver/: ros_motor_cmd_receiver.ino
arduino/ros_motor_cmd_receiver_bluerobotics/: ros_motor_cmd_receiver_bluerobotics.ino
arduino/ros_motor_omni_cmd_receiver/: ros_motor_omni_cmd_receiver.ino
catkin_ws/src/analysis/: CMakeLists.txt  package.xml
catkin_ws/src/duckiepond/: CMakeLists.txt  package.xml
catkin_ws/src/duckiepond/launch/: apriltag_localization.launch  end_to_end_ncs.launch  end_to_end_tf.launch  joy_node.launch  joystick.launch  localization_gps_imu.launch  moos.launch  moos_river.launch  motor_cmd.launch  navigation.launch  ncs_track_and_trail.launch  pid_control.launch  sensor.launch  track_and_trail.launch  waypoint.launch
catkin_ws/src/duckiepond/msg/: Box.msg  Boxlist.msg  Heading.msg  Motor4Cmd.msg  MotorCmd.msg  Motor_cmd.msg  VelocityVector.msg
catkin_ws/src/moos_behavior/: CMakeLists.txt  package.xml
catkin_ws/src/moos_behavior/config/: bamboo.yaml  brian.yaml  gazebo.yaml  monica.yaml  vrx.yaml
catkin_ws/src/moos_behavior/include/: Bridge.cpp
catkin_ws/src/moos_behavior/launch/: moos_waypt.launch
catkin_ws/src/moos_behavior/missions/waypoint/: brian.xml  launch_all.sh  launch_vehicle.sh  monica.xml  shoreside.moos  shoreside.sh  vehicle.bhv  vehicle.moos  vehicle.xml
catkin_ws/src/moos_behavior/src/: moos_waypt.py
docker/: README.md
docker/ipc/: Dockerfile  FindiSAM.cmake  README.md  build.sh
docker/laptop/: Dockerfile
docker/laptop_gpu/: Dockerfile
docker/nano/: Dockerfile  README.md  build.sh  run.sh
docker/pi3/: Dockerfile
docker/tx2/: Dockerfile
docs/: README.md
moos/: .gitignore  CMakeLists.txt  README.md  build.sh
moos/include/: feature.h  transformations.h  types.h  utils.h
moos/src/: CMakeLists.txt
moos/src/pFeatureTracker/: CMakeLists.txt  ColorFeatureList.cpp  ColorFeatureList.h  FeatureTracker.cpp  FeatureTracker.h  FeatureTracker_Info.cpp  FeatureTracker_Info.h  main.cpp  pFeatureTracker.moos
(+179 files in other folders)
